@@ -2,7 +2,12 @@ package com.renewsim.backend.auth.infrastructure.security;
 
 import com.renewsim.backend.auth.application.port.out.TokenProvider;
 import com.renewsim.backend.auth.domain.AuthenticatedUser;
-import io.jsonwebtoken.*;
+import io.jsonwebtoken.Claims;
+import io.jsonwebtoken.Jws;
+import io.jsonwebtoken.JwsHeader;
+import io.jsonwebtoken.JwtException;
+import io.jsonwebtoken.Jwts;
+import io.jsonwebtoken.SignatureAlgorithm;
 import io.jsonwebtoken.security.Keys;
 import jakarta.annotation.PostConstruct;
 import org.springframework.beans.factory.annotation.Value;
@@ -11,7 +16,15 @@ import org.springframework.stereotype.Component;
 import java.nio.charset.StandardCharsets;
 import java.security.Key;
 import java.time.Clock;
-import java.util.*;
+import java.util.Base64;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Date;
+import java.util.Objects;
+import java.util.HashMap;
+import java.util.Optional;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 @Component
 public class JwtTokenProvider implements TokenProvider {
@@ -26,7 +39,22 @@ public class JwtTokenProvider implements TokenProvider {
     private long clockSkewSeconds;
 
     private Key key;
-    private final Clock clock = Clock.systemUTC();
+
+    private Clock clock = Clock.systemUTC();
+
+    private io.jsonwebtoken.Clock jjwtClock = () -> Date.from(clock.instant());
+
+    JwtTokenProvider(String secret, long expirationSeconds, long clockSkewSeconds, Clock clock) {
+        this.secret = secret;
+        this.expirationSeconds = expirationSeconds;
+        this.clockSkewSeconds = clockSkewSeconds;
+        this.clock = (clock != null) ? clock : Clock.systemUTC();
+        this.jjwtClock = () -> Date.from(this.clock.instant());
+        init(); 
+    }
+
+    private JwtTokenProvider() {
+    }
 
     @PostConstruct
     void init() {
@@ -38,42 +66,55 @@ public class JwtTokenProvider implements TokenProvider {
         }
         if (raw.length < 32) {
             throw new IllegalStateException(
-                    "JWT secret too short: got " + raw.length + " bytes, expected at least 32 bytes (256 bits).");
+                "JWT secret too short: got " + raw.length + " bytes, expected at least 32 bytes (256 bits)."
+            );
         }
-        key = Keys.hmacShaKeyFor(raw);
+        this.key = Keys.hmacShaKeyFor(raw);
     }
 
     @Override
     public String generate(AuthenticatedUser user) {
-        Map<String, Object> claims = new HashMap<>();
-        if (user.roles() != null && !user.roles().isEmpty())
+        var claims = new HashMap<String, Object>(4);
+        if (user.roles() != null && !user.roles().isEmpty()) {
             claims.put("roles", user.roles());
-        if (user.scopes() != null && !user.scopes().isEmpty())
+        }
+        if (user.scopes() != null && !user.scopes().isEmpty()) {
             claims.put("scopes", user.scopes());
+        }
 
         Date now = Date.from(clock.instant());
         Date exp = Date.from(clock.instant().plusSeconds(expirationSeconds));
 
         return Jwts.builder()
-                .setSubject(user.username())
-                .setIssuedAt(now)
-                .setExpiration(exp)
-                .addClaims(claims)
-                .signWith(key, SignatureAlgorithm.HS256)
-                .compact();
+            .setSubject(user.username())
+            .setIssuedAt(now)
+            .setExpiration(exp)
+            .addClaims(claims)
+            .signWith(key, SignatureAlgorithm.HS256)
+            .compact();
     }
 
     @Override
     public Optional<AuthenticatedUser> validate(String token) {
         try {
-            var jws = Jwts.parserBuilder()
-                    .setAllowedClockSkewSeconds(clockSkewSeconds)
-                    .setSigningKey(key)
-                    .build()
-                    .parseClaimsJws(token);
+            Jws<Claims> jws = Jwts.parserBuilder()
+                .setSigningKey(key)
+                .setAllowedClockSkewSeconds(clockSkewSeconds)
+                .setClock(jjwtClock)
+                .build()
+                .parseClaimsJws(token);
+
+            JwsHeader<?> header = jws.getHeader();
+            if (!SignatureAlgorithm.HS256.getValue().equals(header.getAlgorithm())) {
+                return Optional.empty();
+            }
 
             Claims c = jws.getBody();
             String subject = c.getSubject();
+            if (subject == null || subject.isBlank()) {
+                return Optional.empty();
+            }
+
             Set<String> roles = toStringSet(c.get("roles"));
             Set<String> scopes = toStringSet(c.get("scopes"));
 
@@ -88,13 +129,14 @@ public class JwtTokenProvider implements TokenProvider {
         return expirationSeconds;
     }
 
-    private static Set<String> toStringSet(Object obj) {
-        if (obj instanceof Collection<?> col) {
-            Set<String> out = new HashSet<>();
-            for (Object o : col)
-                out.add(String.valueOf(o));
-            return out;
+     private static Set<String> toStringSet(Object claim) {
+        if (claim instanceof Collection<?> collection) {
+            return collection.stream()
+                    .filter(Objects::nonNull)
+                    .map(Object::toString)
+                    .collect(Collectors.toSet());
         }
-        return Set.of();
+        return Collections.emptySet();
     }
 }
+
